Fix z-index

--- a/src/styles/Section.css
+++ b/src/styles/Section.css
@@ -18,7 +18,7 @@
   transform: translateY(-25px);
   height: 0;
   transform-origin: top;
-  z-index: 100;
+  z-index: 2;
 }
 
 .section-content.open {
